# AVStudy

./: README.md
AVDemo/: Decode.cpp  Decode.h  Demux.cpp  Demux.h  Encode.cpp  Encode.h  Helper.h  Mux.cpp  Mux.h  main.cpp
Audio/AAC/: AAC.md
DX/: DX.md  DX渲染学习总结.md
DX/DX11/: CMakeLists.txt
DX/DX11/src/: CMakeLists.txt
DX/DX11/src/DX11_init_01/: CMakeLists.txt
DX/DX11/src/DX11_init_01/log/: VXLog.cpp  VXLog.h
DX/DX11/src/DX11_init_01/main/: winmain.cpp
DX/DX11/src/DX11_init_01/render/: DYDX11.cpp  DYDX11.h
DX/DX11/src/DX11_init_01/ui/: DYWnd.cpp  DYWnd.h  resource.h
OpenGL/: OpenGL.md
OpenGL/openGLDemo/app/: CMakeLists.txt
OpenGL/openGLDemo/app/base/: CMakeLists.txt
OpenGL/openGLDemo/app/base/src/: main.cpp
OpenGL/openGLDemo/app/demo/: CMakeLists.txt
OpenGL/openGLDemo/app/demo/src/: main.cpp
OpenGL/openGLDemo/app/helloTriangle2/src/: main.cpp
OpenGL/openGLDemo/app/helloWindow/src/: main.cpp
OpenGL/openGLDemo/include/: stb_image_ex.h
ffmpegStudy/: FFmpegStudy.md  FFmpeg常用结构体.md  FFmpeg时间戳-时间基.md  FFmpeg解封装.md  README.md  windows下编译ffmpeg.md
ffmpegStudy/ffmpegStudy/: .gitignore  CMakeLists.txt  README.md  build.bat
ffmpegStudy/ffmpegStudy/audioEncoder/: AudioEncoder.cpp  AudioEncoder.h
ffmpegStudy/ffmpegStudy/ffmpegBuffer/: CMakeLists.txt  ffmpegBuffer.cpp
ffmpegStudy/ffmpegStudy/ffplay/: CMakeLists.txt  ffplay.c
ffmpegStudy/ffmpegStudy/hw_decode/: hw_decode.c
ffmpegStudy/ffmpegStudy/mp4Muxer/: CMakeLists.txt  Muxer.cpp  Muxer.h  VideoEncoder.cpp  VideoEncoder.h  mp4Muxer.cpp
ffmpegStudy/ffmpegStudy/remuxing/: CMakeLists.txt  remuxing.c
ffmpegStudy/ffmpegStudy/resampling_audio/: CMakeLists.txt  resampling_audio.c
ffmpegStudy/ffmpegStudy/scaling_video/: scaling_video.c
ffmpegStudy/img/: Untitled Diagram.drawio
render/: render.md
renderEngine/: ChromiumRenderEngine.md
renderEngine/img/: IMFPhRwU3MKT1lEvfzIZ.avif
ue5/: ue.md
webVideoAndAudio/: media-internals.md
wiresharkAnalyzeProtcol/: rtmp.md
